# aso

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  aso.db  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requerimentos.md
.aso/context/: orchestrator-context.json
.aso/kanban/: board.json
.aso/quality-gates/: F1-gate.json  F2-gate.json  F3-gate.json  F4-gate.json  F5-gate.json  F6-gate.json  F7-gate.json
.aso/reviews/: F5-core-review.json
.aso/snapshots/: O1.json  O2.json  O3.json  O4.json  O5.json  O6.json  O7.json
.github/workflows/: ci.yml  release.yml
agents/: README.md
contracts/: openapi.yaml
docs/: agents.md  api.md  architecture.md  context.md  deploy.md  domain-model.md  index.md  kanban.md  operations.md  quality-gates.md  requirements.md  snapshots.md
docs/adrs/: ADR-0001-runtime-architecture.md  ADR-0002-kanban-as-execution-plane.md  ADR-0003-contextbus-governance.md  ADR-0004-tech-stack-python.md  (+7 more)
migrations/: env.py
scripts/: aso-agent-wrapper.sh  demo-agent.sh  e2e_candidates.sh  manager.sh  seed-executors.sh  smoke.sh
skills/: README.md
specs/: README.md  adr-registry.md  agent-executor-mock.md  agent-registry.md  api-minimal.md  catalogo-multi-repo.md  cli-minimal.md  context-patch-contextbus.md  domain-models.md  execution-plan.md  executores-codex-compativeis.md  kanban.md  multiagent-decision-engine.md  observability-basic.md  orchestrator-context.md  persistence.md  project-setup.md  quality-gate-engine.md  snapshot-engine.md
tasks/: README.md
(+151 files in other folders)
