[project]
name = "aso-runtime"
version = "0.1.0"
description = "ASO Runtime — Autonomous Software Orchestrator Runtime (core de governança MVP-1)"
readme = "docs/index.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "typer>=0.12",
    "sqlalchemy>=2",
    "alembic>=1.13",
    "structlog>=24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
]
postgres = [
    "psycopg[binary]>=3.1",
]
security = [
    "bandit>=1.7",
    "pip-audit>=2.7",
]
otel = [
    "opentelemetry-sdk>=1.25",
]

[project.scripts]
aso = "aso.cli.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = true

[[tool.mypy.overrides]]
module = "opentelemetry.*"
ignore_missing_imports = true
